fix: fix some html and css layout issues

--- a/client/src/assets/scss/pages/client/game.scss
+++ b/client/src/assets/scss/pages/client/game.scss
@@ -224,7 +224,7 @@
 
 #action-container {
     position: absolute;
-    bottom: 220px;
+    bottom: 250px;
     left: 50%;
     transform: translateX(-50%);
     background: $transparent_bg;
@@ -389,7 +389,7 @@
     border-radius: 8px;
     text-align: center;
     position: absolute;
-    bottom: 100px;
+    bottom: 150px;
     left: 50%;
     transform: translateX(-50%);
     width: 320px;
